colors to rgb values

--- a/src/components/EntryList.module.css
+++ b/src/components/EntryList.module.css
@@ -1,6 +1,6 @@
 .content {
     height: 70%;
-    background-color: "#f9f9f9";
+    background-color: rgb(249, 249, 249);
     padding: 5rem;
     border: 5rem;
     margin: 1rem;
