--- a/src/index.module.css
+++ b/src/index.module.css
@@ -3,5 +3,5 @@ body {
   margin: 0rem;
   border-radius: 10px;
   font-family: 'Helvetica Neue';
-  background-color:#f6f6f6;
+  background-color:rgb(246, 246, 246);
 }
