--- a/src/index.module.css
+++ b/src/index.module.css
@@ -2,6 +2,6 @@ body {
   padding: 0rem;
   margin: 0rem;
   border-radius: 10px;
-  font-family: 'Helvetica Neue';
+  font-family: 'Helvetica Neue', 'Montserrat', sans-serif;
   background-color:rgb(246, 246, 246);
 }
